Fix a DCHECK in WillHandleBrowserAboutURL()

The code in FixupURL does not properly handle "about:blank" variants
where some letter in "blank" is uppercase. This CL fixes the issue by
returning "about:blank" when the lowercase of the input URL is
"about:blank".

Bug: 857201
Change-Id: Ia1ff719d142ae8f2a346cbca231e52a811e9b77c
Reviewed-on: https://chromium-review.googlesource.com/1117627
Reviewed-by: Ehsan Karamad <ekaramad@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Ehsan Karamad <ekaramad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571147}
Former-commit-id: 7009ded58aa656683563186738fc6e38e79d988a